@@ -10,6 +10,7 @@
 - deprecated.h is now defined in terms of current functionality, rather than
   repeating stuff
 - im_flood() and friends rewritten, typically 4x faster
+- removed --with-cimg option, added --disable-cxx
 
 26/11/09 started 7.20.3
 - updated en_GB.po translation 
